testsuite/poke.pkl/map-diag-6.pk
/* { dg-do compile } */

type Foo = struct { int i; any[] a; };

Foo @ 0#B; /* { dg-error "" } */
